--- a/templates/partials/navbar.hbs
+++ b/templates/partials/navbar.hbs
@@ -17,20 +17,70 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
         <li class="nav-item contry">
-          <a class="nav-link active contry egypt" aria-current="page" href="?search=Egypt">Egypt</a>
+          <a class="nav-link active contry egypt" aria-current="page" href="?search=eg">Egypt</a>
         </li>
         <li class="nav-item contry">
-          <a class="nav-link active contry palstine " aria-current="page" href="?search=palstiene">Palstiene</a>
+          <a class="nav-link active contry palstine " aria-current="page" href="?search=ae">Palstiene</a>
         </li>
         <li class="nav-item contry">
-          <a class="nav-link active contry russia" aria-current="page" href="?search=Russia">Russia</a>
+          <a class="nav-link active contry russia" aria-current="page" href="?search=ru">Russia</a>
         </li>
         <li class="nav-item contry">
-          <a class="nav-link active contry england" aria-current="page" href="?search=England">England</a>
+          <a class="nav-link active contry england" aria-current="page" href="?search=gb">England</a>
         </li>
       </ul>
-      <form class="d-flex">
-        <input class="form-control me-2" type="search" placeholder="Search another country news" aria-label="Search">
+      <form id="form" class="d-flex">
+          <select id="search">
+              <option value="ar">Argentina</option>
+              <option value="at"> Austria</option>
+              <option value="au">Australia</option>
+              <option value="be">Belgium</option>
+              <option value="br"> Brazil</option>
+              <option value="bg">Bulgaria</option>
+              <option value="ca">Canada</option>
+              <option value="cn">China</option>
+              <option value="ch">Switzerland</option>
+              <option value="co"> Colombia</option>
+              <option value="cu">Cuba</option>
+              <option value="cz">Czechia</option>
+              <option value="de">Germany</option>
+              <option value="fr"> France</option>
+              <option value="gr">Greece</option>
+              <option value="hk">Hong Kong</option>
+              <option value="hu">Hungary</option>
+              <option value="id">Indonesia</option>
+              <option value="ie">Ireland</option>
+              <option value="in" >India</option>
+              <option value="it">Italy</option>
+              <option value="jp">Japan</option>
+              <option value="kr">Korea</option>
+              <option value="lt"> Lithuania</option>
+              <option value="lv">Latvia</option>
+              <option value="ma">Morocco</option>
+              <option value="mx">Mexico</option>
+              <option value="my">Malaysia</option>
+              <option value="nl"> Netherlands</option>
+              <option value="ng">Nigeria</option>
+              <option value="no">Norway</option>
+              <option value="nz" >New Zealand</option>
+              <option value="ph">Philippines</option>
+              <option value="pl">Poland</option>
+              <option value="pt">Portugal</option>
+              <option value="ro">Romania</option>
+              <option value="rs">Serbia</option>
+              <option value="sa">Saudi Arabia</option>
+              <option value="se">Sweden</option>
+              <option value="sg">Singapore</option>
+              <option value="si">Slovenia</option>
+              <option value="sk">Slovakia</option>
+              <option value="th">Thailand</option>
+              <option value="tr">Turkey</option>
+              <option value="tw"> Taiwan, Province of China</option>
+              <option value="ua">Ukraine</option>
+              <option value="ae">United Arab Emirates</option>
+              <option value="ve">Venezuela </option>
+              <option value="za">South Africa</option>
+              </select>
         <button class="btn btn-outline-success " type="submit">search</button>
       </form>
     </div>
@@ -47,7 +97,7 @@
 
 
 
-    <script src="news.js"></script>
+    <script src="/puplic/news.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </body>
 </html>
