--- a/templates/partials/navbar.hbs
+++ b/templates/partials/navbar.hbs
@@ -31,6 +31,7 @@
       </ul>
       <form id="form" class="d-flex">
           <select id="search">
+            <option value="us">select a Country</option>
               <option value="ar">Argentina</option>
               <option value="at"> Austria</option>
               <option value="au">Australia</option>
@@ -87,17 +88,21 @@
   </div>
 </nav>
     
+    <script>
+        try {
+                let  sreachCountry = document.getElementById("search")
+                let COUNTRY_Form = document.getElementById("form")
+                console.log(COUNTRY_Form)
+                COUNTRY_Form.addEventListener("submit",(e)=>{
+                e.preventDefault()
+                window.open(`http://localhost:3000/?search=${sreachCountry.value}`,"_self")
+            })
+         } 
+        catch (error) {
+                console.log(error) 
+          }
 
-
-
-
-
-
-
-
-
-
-    <script src="/puplic/news.js"></script>
+    </script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </body>
 </html>
